# Asynx6-Web-Scanner

./: .gitignore  README.md  index.py  list_target.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
asynx6/: __init__.py  __main__.py  ci.py  cli.py  ml_fp.py  profiles.py
asynx6/collaborator/: __init__.py  client.py  server.py  tokens.py
asynx6/core/: config.py  exceptions.py  http.py  logging_setup.py  models.py  rate_limit.py  strategies.py  validators.py
asynx6/engine/: __init__.py  batch.py  orchestrator.py  phases.py  scheduler.py
asynx6/exfil/: __init__.py  db_mysql.py  secrets_archive.py
asynx6/fuzz/: __init__.py  api.py  directory.py  templates.py
asynx6/i18n/: __init__.py  strings.py  translator.py
asynx6/notifications/: __init__.py  base.py  discord.py  slack.py  telegram.py  webhook.py
asynx6/plugins/: __init__.py  loader.py
asynx6/recon/: __init__.py  architect.py  chameleon.py  crawler.py  dns_enum.py  headless.py  network.py  subdomain.py  wayback.py
asynx6/reporting/: __init__.py  cvss.py  html_report.py  json_export.py  markdown.py
asynx6/storage/: __init__.py  db.py  models.py
asynx6/tui/: __init__.py  app.py
asynx6/vuln/: __init__.py  cors.py  graphql.py  headers.py  idor.py  jwt.py  lfi.py  open_redirect.py  sqli.py  ssrf.py  websocket.py  xss.py
asynx6/web/: __init__.py  app.py  routes.py
data/: default_creds.json
docs/: changelog.md  contributing.md  index.md  mkdocs.yml
docs/api/: index.md
docs/features/: collaborator.md  dashboard.md  notifications.md  storage.md
docs/getting-started/: install.md  quickstart.md
docs/modules/: fuzz.md  recon.md  reporting.md  vuln.md
docs/usage/: ci.md  cli.md  profiles.md
modules/: exploit_db.py  scanner_api.py  scanner_architect.py  scanner_brute.py  scanner_chameleon.py  scanner_crawler.py  scanner_headers.py  scanner_headless.py  scanner_network.py  scanner_subdomain.py  scanner_vulnerability.py  utils.py
templates/: basic.yaml
tests/: conftest.py
tests/fixtures/: graphql_html_false_positive.html  graphql_real_introspection.json  loot_vault_sample.md  real_findings_dotenv  spa_soft404_nextjs.html  spa_soft404_nuxt.html  ssrf_html_with_ami_id.html  ssrf_imds_response.json
tests/integration/: test_smoke.py
tests/unit/: test_ci.py  test_cli.py  test_cli_full.py  test_cli_v3.py  test_collaborator.py  test_collaborator_client.py  test_config.py  test_engine_batch.py  test_engine_orchestrator.py  test_engine_scheduler.py  test_exceptions.py  test_exfil_db_mysql.py  test_exfil_secrets_archive.py  test_fuzz_api.py  test_fuzz_directory.py  test_fuzz_templates.py  test_http.py  test_i18n.py  test_logging_setup.py  test_ml_fp.py  test_models.py  test_notifications.py  test_phases.py  test_plugins.py  test_plugins_extra.py  test_profiles.py  test_rate_limit.py  test_recon_architect.py  test_recon_chameleon.py  test_recon_crawler.py  test_recon_dns_enum.py  test_recon_headless.py  test_recon_headless_basic.py  test_recon_network.py  test_recon_subdomain.py  test_recon_wayback.py  (+19 more)
(+10 files in other folders)
